<resources>
    <string name="app_name">ProofOfVisitAdmin</string>
    <string name="text_information">Information</string>
    <string name="text_faucet_bergs">Faucet Bergs</string>
    <string name="text_location_settings">Location Settings</string>
    <string name="text_wallet_import">Import Wallet</string>
    <string name="text_scan_qrcode">Scan QR-Code</string>
    <string name="text_transaction">Really want to start the transaction for address:\n\n</string>
    <string name="text_wallet_address">Wallet address:</string>
    <string name="tv_no_wallet">No wallet file detected.</string>
    <string name="tv_location_settings_no_wallet">Import wallet file first.</string>
    <string name="tv_locationname">Locationname</string>
    <string name="tv_tokenname">Tokenname</string>
    <string name="tv_tokensymbol">Tokensymbol</string>
    <string name="tv_bergs">Bergs</string>
    <string name="tv_location_address">Locationaddress</string>
    <string name="tv_information_no_values">To view Information, import a wallet\nand set location settings.</string>
    <string name="tv_camera_no_values">To use camera, import a wallet\nand set location settings.</string>
    <string name="hint_enter_pw">Enter password</string>
    <string name="hint_locatoinname">Enter locationname</string>
    <string name="hint_tokenname">Enter tokenname</string>
    <string name="hint_tokensymbol">Enter tokensymbol</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_abort">Abort</string>
    <string name="btn_save">Save</string>
    <string name="btn_coply_address">Copy Address</string>
</resources>
