<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.ifis.proofofvisitadmin.MainActivity">
    <item
        android:id="@+id/action_information"
        android:orderInCategory="100"
        android:title="@string/text_information"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_faucet_bergs"
        android:orderInCategory="100"
        android:title="@string/text_faucet_bergs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_location_settings"
        android:orderInCategory="100"
        android:title="@string/text_location_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_wallet_import"
        android:orderInCategory="100"
        android:title="@string/text_wallet_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan_qrcode"
        android:orderInCategory="100"
        android:title="@string/text_scan_qrcode"
        app:showAsAction="never" />
</menu>
